Fixed the issue where the point div will overflow and can't scroll

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ input[type="button"] {
 
 #pointDiv {
     height: 500px;
-    overflow-y: hidden;
+    overflow-y: scroll;
 }
 
 #playerList {
